welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:42: error: '(' expected but identifier found.
    	if estFaceMur(){
           ^SnakeBuggle:46: error: illegal start of simple expression
    } else {
    ^SnakeBuggle:49: error: ';' expected but 'else' found.
  else if(getDirection()==Direction.OUEST){
  ^SnakeBuggle:58: error: ';' expected but 'else' found.
   }else{
    ^SnakeBuggle:66: error: Unmatched closing brace '}' ignored here
}
^